<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/match_match"
              android:background="?attr/layout_item_bg"
              android:scrollbars="none"
              android:orientation="vertical">

    <LinearLayout
        style="@style/match_wrap"
        android:orientation="vertical">

        <ImageView
            style="@style/wrap_wrap"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_28"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/version_tv"
            style="@style/wrap_wrap"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_5"
            android:textColor="?attr/android:textColor"
            android:textSize="@dimen/text_size_14"
            android:text="1.1.0"/>

        <View
            style="@style/h_line"
            android:layout_marginTop="@dimen/space_10" />

        <RelativeLayout
            android:id="@+id/check_update_rl"
            style="@style/option_item_ll">

            <TextView
                style="@style/option_item_text_parent"
                android:textColor="?attr/android:textColor"
                android:textSize="@dimen/text_size_16"
                android:text="@string/update"/>

        </RelativeLayout>

        <View style="@style/h_line" />

        <RelativeLayout
            android:id="@+id/grade_rl"
            style="@style/option_item_ll">

            <TextView
                style="@style/option_item_text_parent"
                android:textColor="?attr/android:textColor"
                android:textSize="@dimen/text_size_16"
                android:text="@string/grade"/>
        </RelativeLayout>

        <View style="@style/h_line" />

        <View
            style="@style/h_line"
            android:layout_marginTop="@dimen/space_20" />

        <RelativeLayout
            android:id="@+id/git_app_rl"
            style="@style/option_item_ll">

            <TextView
                style="@style/option_item_text_parent"
                android:textColor="?attr/android:textColor"
                android:textSize="@dimen/text_size_16"
                android:text="@string/gitapp"/>
        </RelativeLayout>

        <View style="@style/h_line" />

        <LinearLayout
            style="@style/match_wrap"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/space_50"
            android:gravity="center"
            android:padding="@dimen/space_10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/teascript_site_tv"
                style="@style/wrap_wrap"
                android:layout_marginRight="@dimen/space_15"
                android:text="@string/site"
                android:textColor="?android:textColorLink" />


            <TextView
                android:id="@+id/know_more_tv"
                style="@style/wrap_wrap"
                android:text="@string/knowmore"
                android:textColor="?android:textColorLink" />

        </LinearLayout>


        <TextView
            style="@style/wrap_wrap"
            android:layout_gravity="center"
            android:text="@string/copyright"
            android:textColor="?attr/infoTextColor" />

    </LinearLayout>

</LinearLayout>