<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/match_match"
              android:orientation="vertical"
              android:padding="@dimen/space_8">

    <TextView
        style="@style/wrap_wrap"
        android:text="@string/report_link"
        android:textColor="@color/main_gray"
        android:textSize="@dimen/text_size_12"/>

    <TextView
        android:id="@+id/link_tv"
        style="@style/wrap_wrap"
        android:layout_marginTop="@dimen/space_2"
        android:padding="@dimen/space_8"
        android:textColor="@color/main_black"
        android:textSize="@dimen/text_size_12"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="@dimen/space_4"
        android:layout_marginTop="@dimen/space_4"
        android:background="@color/list_divider_color" />

    <TextView
        style="@style/wrap_wrap"
        android:text="@string/report_reason"
        android:textColor="@color/main_gray"
        android:textSize="@dimen/text_size_12" />

    <TextView
        android:id="@+id/reason_tv"
        style="@style/match_wrap"
        android:layout_marginTop="@dimen/space_2"
        android:gravity="center_vertical"
        android:padding="@dimen/space_8"
        android:drawableRight="@drawable/icon_item_goto_right_tip"
        android:textColor="@color/main_black"
        android:textSize="@dimen/text_size_12" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="@dimen/space_4"
        android:layout_marginTop="@dimen/space_4"
        android:background="@color/list_divider_color" />


    <EditText
        android:id="@+id/content_et"
        style="@style/match_wrap"
        android:background="@drawable/comment_edittext_selector"
        android:gravity="top"
        android:hint="@string/other_reason"
        android:minLines="2"
        android:padding="@dimen/space_4"
        android:textColor="@color/main_black"
        android:textColorHint="@color/main_gray"
        android:textSize="@dimen/text_size_14" />


</LinearLayout>